<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <!-- Title panel -->
    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:layout_marginLeft="@dimen/layout_margin"
	        android:layout_marginRight="@dimen/layout_margin" >
	    <TextView
		        android:id="@+id/editAccountPageTitleLabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingTop="@dimen/medium_spacing"
		        android:paddingBottom="@dimen/medium_spacing"
		        android:text="@string/account_description_label"
		        android:textSize="@dimen/xlarge_text"
		        android:textColor="@android:color/darker_gray" />
	 </LinearLayout>
	 
    <!-- Delete Account Button -->
    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/layout_margin"
	        android:layout_marginRight="@dimen/layout_margin" >
		    <Button
			        android:id="@+id/editAccountDeleteButton"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textSize="@dimen/medium_text"
			        android:text="@string/delete_button" />
	 </LinearLayout>

    <!--  Content Panel -->
    <LinearLayout 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"
        	android:layout_marginLeft="@dimen/layout_margin"
	        android:layout_marginRight="@dimen/layout_margin"
        	android:weightSum="100">
	    
	    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    			android:layout_width="fill_parent"
   			 	android:layout_height="fill_parent"
    			android:layout_weight="95">
    			
	        <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"			        
			        android:orientation="vertical"
			        android:layout_marginBottom="@dimen/layout_margin"
			        android:isScrollContainer="true" >
			        
			    <!-- Username -->
	            <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:gravity="center_horizontal"
			        android:orientation="horizontal"
			        android:layout_marginBottom="@dimen/layout_margin" >
			        
	                <TextView
			            android:id="@+id/editAccountPageUsernameLabel"
			            android:layout_width="@dimen/word_width"
			            android:layout_height="wrap_content"           
			            android:layout_marginTop="@dimen/high_spacing"        
			            android:text="@string/user_name_label"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
	                
	                <EditText
  			            android:id="@+id/editAccountPageUsernameTextBox"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginTop="@dimen/high_spacing"
			            android:ems="10" />
               </LinearLayout>
               
	            <!-- Old Password -->
	            <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:gravity="center_horizontal"
			        android:orientation="horizontal"
			        android:layout_marginBottom="@dimen/layout_margin" >
			        
	                <TextView
			            android:id="@+id/editAccountPageOldPasswordLabel"
			            android:layout_width="@dimen/word_width"
			            android:layout_height="wrap_content"
			            android:layout_marginTop="@dimen/button_padding"
			            android:text="@string/editaccount_oldpassword"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
	                
	                <EditText
			            android:id="@+id/editAccountPageOldPasswordTextBox"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginTop="@dimen/text_box_spacing"
			            android:inputType="textPassword"
			            android:ems="10" >
			            <requestFocus />
			        </EditText>
               </LinearLayout>
               
	            <!-- New Password -->
	            <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:gravity="center_horizontal"
			        android:orientation="horizontal"
			        android:layout_marginBottom="@dimen/layout_margin" >
			        
	                 <TextView
			            android:id="@+id/editAccountPagePasswordLabel"
			            android:layout_width="@dimen/word_width"
			            android:layout_height="wrap_content"
			            android:layout_marginTop="@dimen/button_padding"
			            android:text="@string/editaccount_newpassword"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
	                
	                <EditText
			            android:id="@+id/editAccountPagePasswordTextBox"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginTop="@dimen/text_box_spacing"
			            android:inputType="textPassword"
			            android:ems="10" >
			            <requestFocus />
			        </EditText>
               </LinearLayout>
               
	            <!-- Confirm New Password -->
	            <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:gravity="center_horizontal"
			        android:orientation="horizontal"
			        android:layout_marginBottom="@dimen/layout_margin" >
			        
	                 <TextView
			            android:id="@+id/editAccountPageConfirmPasswordLabel"
			            android:layout_width="@dimen/word_width"
			            android:layout_height="wrap_content"
			            android:layout_marginTop="@dimen/button_padding"
			            android:text="@string/account_confirmpassword"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
	                
	               <EditText
			            android:id="@+id/editAccountPageConfirmPasswordTextBox"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginTop="@dimen/text_box_spacing"
			            android:inputType="textPassword"
			            android:ems="10" />
               </LinearLayout>
               
	            <!--  Micro Controller Address -->
	             <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:layout_marginBottom="@dimen/layout_margin"
	                android:gravity="center_horizontal"
	                android:orientation="horizontal" >

	                <TextView
	                    android:id="@+id/editaccountPageMCaddress"
	                    android:layout_width="@dimen/word_width"
	                    android:layout_height="wrap_content"
	                    android:layout_marginTop="@dimen/button_padding"
	                    android:text="@string/microcontrolleraddress"
	                    android:textAppearance="?android:attr/textAppearanceMedium" />

	                <EditText
	                    android:id="@+id/editaccountPageMCaddressText"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginTop="@dimen/medium_spacing"
	                    android:ems="10"
	                     />
	            </LinearLayout>
	            
	            <!--  Security Question -->
	            <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:gravity="center_horizontal"
			        android:orientation="horizontal"
			        android:layout_marginBottom="@dimen/layout_margin" >
			        
	                 <TextView
			            android:id="@+id/editAccountPageSecurityQuestionLabel"
			            android:layout_width="@dimen/word_width"
			            android:layout_height="wrap_content"
			            android:layout_marginTop="@dimen/button_padding"
			            android:text="@string/account_securityquestion"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
	                
	               	<Spinner
			            android:id="@+id/editAccountPageSecurityQuestions"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginTop="@dimen/text_box_spacing" />
               </LinearLayout>
               
	            <!--  Security Answer -->
	            <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:gravity="center_horizontal"
			        android:orientation="horizontal"
			        android:layout_marginBottom="@dimen/layout_margin" >
			        
	                 <TextView
			            android:id="@+id/editAccountPageSecurityAnswerLabel"
			            android:layout_width="@dimen/word_width"
			            android:layout_height="wrap_content"
			            android:layout_marginTop="@dimen/button_padding"
			            android:text="@string/account_securityanswer"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
	                
	               	<EditText
			            android:id="@+id/editAccountPageSecurityAnswerTextBox"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:layout_marginTop="@dimen/text_box_spacing"
			            android:ems="10" />
               </LinearLayout>
              </LinearLayout>
               </ScrollView>
		    

		<!-- Buttons panel -->		 
		<LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:gravity="bottom"
		        android:orientation="horizontal"
		        android:layout_marginTop="@dimen/layout_margin"
		        android:layout_marginBottom="@dimen/layout_margin"		        
		        android:layout_weight="5" > >	  
		       <Button
			        android:id="@+id/editAccountCancelButton"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="@dimen/medium_text"
			        android:text="@string/cancel_button" />
			    <Button
			        android:id="@+id/editAccountDoneButton"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textSize="@dimen/medium_text"
			        android:text="@string/done_button" />
			   
		 </LinearLayout>
	 </LinearLayout>

</LinearLayout>